fix table vertical alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+.table tbody>tr>td.vert-align{
+  vertical-align: middle;
+}
